Προσθεσα ~το bottom_menu_bar.xml ~CategoriesActivity που χρησιμοποιει το categories_activity.xml ~TotalSpentActivity που χρησιμοποιει το total_spent_activity.xml
Το αριστερο κουμπι "categories_button" ανοιγει το "Categories_activity"
Το μεσαιο κουμπι "money_spent_button" ανοιγει το "TotalSpentActivity"
Το δεξι κουμπι "graph_button" προς το παρον δε κανει τιποτα,θα ανοιγει το "GraphActivity"

Στα δυο activities που προσθεσα εβαλα τον κωδικα για να αλλαζουν τα activities

~οι εικονες στα κουμπια μπορουν,και καλο θα ηταν να αλλαξουν :P

--- a/ExpensesTracker/app/src/main/res/layout/total_spent_activity.xml
+++ b/ExpensesTracker/app/src/main/res/layout/total_spent_activity.xml
@@ -23,11 +23,15 @@
             <include
                 layout="@layout/total_spent"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
+                android:layout_height="703dp" />
 
         </LinearLayout>
     </ScrollView>
 
+    <include
+        layout="@layout/bottom_menu_bar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
 
 
 </LinearLayout>
