--- a/ExpensesTracker/app/src/main/res/layout/categories_activity.xml
+++ b/ExpensesTracker/app/src/main/res/layout/categories_activity.xml
@@ -29,4 +29,15 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/include3" />
 
+    <include
+        layout="@layout/bottom_menu_bar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.997" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
