--- a/ExpensesTracker/app/src/main/res/values/styles.xml
+++ b/ExpensesTracker/app/src/main/res/values/styles.xml
@@ -10,8 +10,8 @@
         <item name="android:background">@color/purple_700</item>
     </style>
 
-    <!-- Style for each button in categories-->
-    <style name="CategoryButton">
+    <!-- Style for each Category Button - category_button.xml -->
+    <style name="CategoryButton" parent="app_text_appearance">
         <item name="android:layout_marginLeft">20dp</item>
         <item name="android:layout_marginRight">20dp</item>
         <item name="android:layout_marginTop">10dp</item>
@@ -25,4 +25,16 @@
         <item name="fontFamily">sans-serif-black</item>
     </style>
 
+    <!-- Style of Transaction Category - transaction_categories_activity.xml-->
+    <style name="TransactionType" parent="app_text_appearance">
+        <item name="android:textStyle">bold</item>
+        <item name="android:textColor">@color/white</item>
+        <item name="android:textSize">22sp</item>
+    </style>
+
+    <!-- Style for TextViews - initial_activity_xml-->
+    <style name="InitialTextViews" parent="app_text_appearance">
+        <item name="android:textColor">@color/orange_700</item>
+        <item name="android:textSize">22sp</item>
+    </style>
 </resources>
