--- a/ExpensesTracker/app/src/main/res/layout/initial_activity.xml
+++ b/ExpensesTracker/app/src/main/res/layout/initial_activity.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/gray_50"
     tools:context=".MainActivity">
 
     <TextView
@@ -80,12 +81,16 @@
             android:id="@+id/radioButton3"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:textColor="@color/white"
+            android:buttonTint="@color/orange_300"
             android:text="@string/per_week" />
 
         <RadioButton
             android:id="@+id/radioButton4"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:textColor="@color/white"
+            android:buttonTint="@color/orange_300"
             android:text="@string/per_month" />
 
     </RadioGroup>
