--- a/ExpensesTracker/app/src/main/res/layout/transaction_activity.xml
+++ b/ExpensesTracker/app/src/main/res/layout/transaction_activity.xml
@@ -2,38 +2,54 @@
 <androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:background="@color/gray_50"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <EditText
-        android:id="@+id/editTextTransactionAmount"
-        android:layout_width="wrap_content"
+    <include
+        android:id="@+id/include2"
+        layout="@layout/top_title"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:autofillHints="@string/amount"
-        android:ems="10"
-        android:hint="@string/amount"
-        android:inputType="numberSigned|numberDecimal"
-        android:textAlignment="center"
-        android:textAllCaps="true"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.4" />
+        app:layout_constraintTop_toTopOf="parent" />
+
 
     <EditText
         style="@style/app_text_appearance"
         android:id="@+id/editTextTransactionComment"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="24dp"
         android:autofillHints="@string/comment"
+        android:backgroundTint="@color/white"
         android:ems="10"
         android:hint="@string/comment"
         android:inputType="textShortMessage|textLongMessage"
+        android:textColorHint="@color/white"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.502"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/editTextTransactionAmount" />
+
+    <EditText
+        style="@style/app_text_appearance"
+        android:id="@+id/editTextTransactionAmount"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:autofillHints="@string/amount"
+        android:backgroundTint="@color/white"
+        android:ems="10"
+        android:hint="@string/amount"
+        android:inputType="numberSigned|numberDecimal"
+        android:textColorHint="@color/white"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.502"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.411" />
 
     <Button
         style="@style/app_text_appearance"
@@ -47,5 +63,6 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/editTextTransactionComment"
         app:layout_constraintVertical_bias="0.0" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
