--- a/ExpensesTracker/app/src/main/res/values/colors.xml
+++ b/ExpensesTracker/app/src/main/res/values/colors.xml
@@ -7,4 +7,10 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+
+
+    <color name="orange_700">#FFA000</color>
+    <color name="orange_300">#FFB74D</color>
+    <color name="gray_50">#212121</color>
+
 </resources>
