--- a/ExpensesTracker/app/src/main/res/values/styles.xml
+++ b/ExpensesTracker/app/src/main/res/values/styles.xml
@@ -1,13 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <!--Style for top TextView title-->
-    <style name="TitleTextView">
+
+
+    <style name="app_text_appearance">
+        <item name="android:fontFamily">sans-serif</item>
+        <item name="android:textColor">@color/white</item>
+        <item name="android:textSize">16sp</item>
+        <item name="android:textAllCaps">false</item>
+    </style>
+
+    <!--Style for top TextView titles - top_title.xml -->
+    <style name="TitleTextView" parent="app_text_appearance">
         <item name="android:padding">14dp</item>
-        <item name="android:textSize">28sp</item>
         <item name="android:textStyle">bold</item>
-        <item name="fontFamily">sans-serif-black</item>
+        <item name="android:textSize">28sp</item>
         <item name="android:gravity">center</item>
-        <item name="android:background">@color/purple_700</item>
+        <item name="android:background">@color/orange_700</item>
     </style>
 
     <!-- Style for each Category Button - category_button.xml -->
@@ -16,13 +24,27 @@
         <item name="android:layout_marginRight">20dp</item>
         <item name="android:layout_marginTop">10dp</item>
         <item name="android:layout_marginBottom">10dp</item>
+        <item name="android:background">@color/orange_700</item>
+        <item name="android:backgroundTint">@color/orange_700</item>
     </style>
 
-    <!-- Style of TextViews in total_spend_activity-->
-    <style name="CategoryTextView">
-        <item name="android:textSize">28sp</item>
+    <!-- Style of Categories TextViews - total_spend.xml -->
+    <style name="CategoryTextView" parent="app_text_appearance">
+        <item name="android:textSize">22sp</item>
         <item name="android:textStyle">bold</item>
-        <item name="fontFamily">sans-serif-black</item>
+        <item name="android:textColor">@color/orange_700</item>
+        <item name="android:textAlignment">center</item>
+        <item name="android:layout_height">40dp</item>
+        <item name="android:layout_marginTop">42dp</item>
+    </style>
+
+    <!-- Style of Money TextViews - total_spend.xml-->
+    <style name="MoneySpentTextView" parent="app_text_appearance">
+        <item name="android:textStyle">bold</item>
+        <item name="android:textColor">@color/white</item>
+        <item name="android:textAlignment">center</item>
+        <item name="android:layout_height">32dp</item>
+        <item name="android:layout_marginTop">8dp</item>
     </style>
 
     <!-- Style of Transaction Category - transaction_categories_activity.xml-->
