--- a/ExpensesTracker/app/src/main/res/layout/bottom_menu_bar.xml
+++ b/ExpensesTracker/app/src/main/res/layout/bottom_menu_bar.xml
@@ -3,7 +3,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/bottom_menu_bar">
+    android:id="@+id/bottom_menu_bar"
+    android:background="@color/gray_50">
 
 
 
@@ -21,12 +22,14 @@
 
     <ImageButton
         android:id="@+id/categories_button"
+        android:onClick="menuChange"
         android:contentDescription="CategoriesIcon"
         android:layout_width="80dp"
         android:layout_height="72dp"
         android:layout_marginStart="28dp"
         android:background="@null"
         android:src="@drawable/ic_categories"
+        android:tint="@color/white"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/money_spent_button"
         app:layout_constraintHorizontal_bias="0.500"
@@ -35,13 +38,14 @@
         app:layout_constraintVertical_bias="0.996" />
 
     <ImageButton
-
         android:id="@+id/money_spent_button"
+        android:onClick="menuChange"
         android:contentDescription="MoneySpent Icon"
         android:layout_width="80dp"
         android:layout_height="72dp"
         android:background="@null"
         android:src="@drawable/ic_money"
+        android:tint="@color/white"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
@@ -49,12 +53,14 @@
 
     <ImageButton
         android:id="@+id/graph_button"
+        android:onClick="menuChange"
         android:layout_width="80dp"
         android:contentDescription="graph Icon"
         android:layout_height="72dp"
         android:layout_marginEnd="40dp"
         android:background="@null"
         android:src="@drawable/ic_graph"
+        android:tint="@color/white"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.411"
