--- a/ExpensesTracker/app/src/main/res/layout/initial_activity.xml
+++ b/ExpensesTracker/app/src/main/res/layout/initial_activity.xml
@@ -4,9 +4,11 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/gray_50"
     tools:context=".MainActivity">
 
     <TextView
+        style="@style/InitialTextViews"
         android:id="@+id/textView"
         android:layout_width="79dp"
         android:layout_height="27dp"
@@ -19,19 +21,23 @@
 
     <EditText
         android:id="@+id/editTextTextPersonName"
+        style="@style/app_text_appearance"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
-        android:hint="@string/name"
         android:autofillHints="@string/name"
+        android:backgroundTint="@color/white"
         android:ems="10"
+        android:hint="@string/name"
         android:inputType="textPersonName"
+        android:textColorHint="@color/white"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.497"
+        app:layout_constraintHorizontal_bias="0.446"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView" />
 
     <TextView
+        style="@style/InitialTextViews"
         android:id="@+id/textView2"
         android:layout_width="79dp"
         android:layout_height="27dp"
@@ -44,20 +50,24 @@
 
     <EditText
         android:id="@+id/editTextTextPersonName2"
+        style="@style/app_text_appearance"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:autofillHints="@string/initial_budget"
+        android:backgroundTint="@color/white"
         android:ems="10"
+        android:hint="@string/initial_budget"
         android:inputType="number"
+        android:textColorHint="@color/white"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.497"
+        app:layout_constraintHorizontal_bias="0.446"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView2"
-        app:layout_constraintVertical_bias="0.041"
-        android:hint="@string/initial_budget"
-        android:autofillHints="@string/initial_budget"/>
+        app:layout_constraintVertical_bias="0.062" />
 
     <RadioGroup
+        style="@style/app_text_appearance"
         android:id="@+id/radioGroup"
         android:layout_width="172dp"
         android:layout_height="121dp"
@@ -71,12 +81,16 @@
             android:id="@+id/radioButton3"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:textColor="@color/white"
+            android:buttonTint="@color/orange_300"
             android:text="@string/per_week" />
 
         <RadioButton
             android:id="@+id/radioButton4"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:textColor="@color/white"
+            android:buttonTint="@color/orange_300"
             android:text="@string/per_month" />
 
     </RadioGroup>
