--- a/ExpensesTracker/app/src/main/res/layout/total_spent.xml
+++ b/ExpensesTracker/app/src/main/res/layout/total_spent.xml
@@ -6,83 +6,54 @@
     android:orientation="vertical">
 
     <TextView
+        style="@style/CategoryTextView"
         android:layout_width="match_parent"
-        android:layout_height="32dp"
         android:layout_marginTop="12dp"
-        android:textAlignment="center"
-        android:text="@string/food_category"
-        style="@style/CategoryTextView"/>
+        android:text="@string/food_category" />
 
     <TextView
         android:layout_width="match_parent"
-        android:layout_height="32dp"
-        android:layout_marginTop="22dp"
-        android:textAlignment="center"
         android:text="$200"
-        style="@style/CategoryTextView"/>
+        style="@style/MoneySpentTextView"/>
 
     <TextView
         android:layout_width="match_parent"
-        android:layout_height="32dp"
-        android:layout_marginTop="42dp"
-        android:textAlignment="center"
         android:text="@string/drink_category"
         style="@style/CategoryTextView"/>
 
     <TextView
         android:layout_width="match_parent"
-        android:layout_height="32dp"
-        android:layout_marginTop="22dp"
-        android:textAlignment="center"
         android:text="$200"
-        style="@style/CategoryTextView"/>
+        style="@style/MoneySpentTextView"/>
 
     <TextView
         android:layout_width="match_parent"
-        android:layout_height="32dp"
-        android:layout_marginTop="42dp"
-        android:textAlignment="center"
         android:text="@string/shopping_category"
         style="@style/CategoryTextView"/>
 
     <TextView
         android:layout_width="match_parent"
-        android:layout_height="32dp"
-        android:layout_marginTop="22dp"
-        android:textAlignment="center"
         android:text="$200"
-        style="@style/CategoryTextView"/>
+        style="@style/MoneySpentTextView"/>
 
     <TextView
         android:layout_width="match_parent"
-        android:layout_height="32dp"
-        android:layout_marginTop="42dp"
-        android:textAlignment="center"
         android:text="@string/entertainment_category"
         style="@style/CategoryTextView"/>
 
     <TextView
         android:layout_width="match_parent"
-        android:layout_height="32dp"
-        android:layout_marginTop="22dp"
-        android:textAlignment="center"
         android:text="$200"
-        style="@style/CategoryTextView"/>
+        style="@style/MoneySpentTextView"/>
 
     <TextView
         android:layout_width="match_parent"
-        android:layout_height="32dp"
-        android:layout_marginTop="42dp"
-        android:textAlignment="center"
         android:text="@string/investments_category"
         style="@style/CategoryTextView"/>
 
     <TextView
         android:layout_width="match_parent"
-        android:layout_height="32dp"
-        android:layout_marginTop="22dp"
-        android:textAlignment="center"
         android:text="$200"
-        style="@style/CategoryTextView"/>
+        style="@style/MoneySpentTextView"/>
 
 </LinearLayout>
