python script implemented and added GraphActivity2

--- a/ExpensesTracker/app/src/main/res/layout/activity_graph.xml
+++ b/ExpensesTracker/app/src/main/res/layout/activity_graph.xml
@@ -11,40 +11,41 @@
         android:id="@+id/inputTextY"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="2dp"
-        android:layout_marginTop="4dp"
+        android:layout_marginBottom="52dp"
         android:autofillHints=""
         android:hint="@string/enter_money"
         android:inputType="text"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintBottom_toTopOf="@+id/graph"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintStart_toStartOf="parent" />
 
     <Button
         android:id="@+id/insertButton"
-        android:layout_width="0dp"
-        android:layout_height="52dp"
+        android:layout_width="146dp"
+        android:layout_height="57dp"
         android:layout_marginStart="8dp"
-        android:layout_marginEnd="2dp"
+        android:layout_marginTop="76dp"
         android:text="@string/button"
+        app:layout_constraintBottom_toTopOf="@+id/inputTextY"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/inputTextY"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintHorizontal_bias="0.482"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.0" />
 
     <com.jjoe64.graphview.GraphView
         android:id="@+id/graph"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
+        android:layout_width="241dp"
+        android:layout_height="292dp"
         android:layout_marginStart="24dp"
-        android:layout_marginTop="3dp"
         android:layout_marginEnd="24dp"
-        android:layout_marginBottom="8dp"
+        android:layout_marginBottom="112dp"
         app:layout_constraintBottom_toTopOf="@+id/include2"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.042"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/inputTextY" />
+        app:layout_constraintStart_toStartOf="parent" />
 
     <include
         android:id="@+id/include2"
