--- a/ExpensesTracker/app/src/main/res/layout/activity_graph2.xml
+++ b/ExpensesTracker/app/src/main/res/layout/activity_graph2.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <com.jjoe64.graphview.GraphView
+    <ImageView
         android:id="@+id/iv"
         android:layout_width="132dp"
         android:layout_height="184dp"
@@ -20,21 +20,27 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/inputTextY" />
+        app:layout_constraintTop_toBottomOf="@+id/textViewInsertData"
+        android:contentDescription="TODO" />
 
     <Button
         android:id="@+id/insertButton2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="88dp"
         android:text="Button"
-        tools:layout_editor_absoluteX="161dp"
-        tools:layout_editor_absoluteY="86dp" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/textViewInsertData"
         android:layout_width="83dp"
         android:layout_height="41dp"
+        android:layout_marginTop="36dp"
         android:text="TextView"
-        tools:layout_editor_absoluteX="163dp"
-        tools:layout_editor_absoluteY="153dp" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/insertButton2" />
 </androidx.constraintlayout.widget.ConstraintLayout>
