--- a/ExpensesTracker/app/src/main/res/layout/activity_graph2.xml
+++ b/ExpensesTracker/app/src/main/res/layout/activity_graph2.xml
@@ -8,20 +8,19 @@
 
     <ImageView
         android:id="@+id/iv"
-        android:layout_width="132dp"
-        android:layout_height="184dp"
+        android:layout_width="385dp"
+        android:layout_height="429dp"
         android:layout_marginStart="24dp"
-        android:layout_marginTop="3dp"
+        android:layout_marginTop="20dp"
         android:layout_marginEnd="24dp"
-        android:layout_marginBottom="272dp"
+        android:contentDescription="TODO"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.497"
+        app:layout_constraintHorizontal_bias="0.636"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textViewInsertData"
-        android:contentDescription="TODO" />
+        app:layout_constraintTop_toBottomOf="@+id/textViewInsertData" />
 
     <Button
         android:id="@+id/insertButton2"
@@ -38,9 +37,20 @@
         android:id="@+id/textViewInsertData"
         android:layout_width="83dp"
         android:layout_height="41dp"
-        android:layout_marginTop="36dp"
+        android:layout_marginTop="64dp"
         android:text="TextView"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.506"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/insertButton2" />
+
+    <include
+        android:id="@+id/include2"
+        layout="@layout/bottom_menu_bar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
